# android-shmem

./: CMakeLists.txt  shmem.c  shmem.h  shmem_socket.c  shmem_socket.h  test.c  test_client.c  test_server.c
